syntax = "proto3";

option csharp_namespace = "HealthCheck.Grpc";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetVersion (VersionRequest) returns (VersionReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message VersionRequest {}

message VersionReply {
  string version = 1;
}
